# dewan_manual_curation

./: .gitignore  pyproject.toml  setup.py
dewan_manual_curation/: __main__.py  cell_trace.py  dewan_manual_curation.py  gui.py  manual_curation.py  project_folder.py  requirements.txt
dewan_manual_curation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dewan_manual_curation/_components/: analog_trace.py  callbacks.py  cell_trace.py  funcs.py  maxprojection.py
dewan_manual_curation/_comps/: callbacks.py  cell_trace.py
